# ChangeLog for app-misc/heyu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added USE flag description wrt GLEP 56

  29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  heyu-2.3.2.ebuild:
  Remove mirror restriction

  24 Jun 2008; Sven Schwyn (svoop) <gentoo@bitcetera.com> heyu-2.3.2.ebuild:
  Minor changes according to input from IRC.

  18 Jun 2008; Sven Schwyn (svoop) <gentoo@bitcetera.com> +files/2.3.2,
  +files/2.3.2/heyu.init, +heyu-2.3.2.ebuild, +metadata.xml:
  new ebuild app-misc/heyu (bug 91396)
